# Simlinq

./: .gitmodules
include/: Linq.hpp
tests/: CMakeLists.txt
tests/runner/: CMakeLists.txt  runner.cpp
tests/sources/: Simple.cpp  runner.cpp
tests/suits/: CMakeLists.txt  characteristic.cpp  check.cpp  generating.cpp  optional.cpp  simple.cpp
